--- a/assets/styles/scss/abstracts/_functions.scss
+++ b/assets/styles/scss/abstracts/_functions.scss
@@ -1,8 +1,8 @@
 // -----------------------------------------------------------------------------
-// +  _functions.scss: This partial file contains all Scss 'functions'.
+// +  <<--------------------<< FUNCTIONS >>-------------------->>
 // -----------------------------------------------------------------------------
 
-// #  Raf's functions
+// -  <---------------| Import Function Partials |--------------->
 @import 'functions/alpha';
 @import 'functions/lightness';
 @import 'functions/adjust-hsl';
