--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 // -----------------------------------------------------------------------------
-// +  _variables.scss: This partial file contains all Scss 'variables'.
+// +  <<--------------------<< VARIABLES >>-------------------->>
 // -----------------------------------------------------------------------------
 
-// #  Kenneth's + Emiels Variables
+// -  <---------------| Import Variables V1 Partials |--------------->
 @import 'variables/variables--v1';
 
-// #  Raf's Variables
+// -  <---------------| Import Variables V2 Partials |--------------->
 @import 'variables/variables--v2';
