--- a/assets/styles/scss/abstracts/functions/_alpha.scss
+++ b/assets/styles/scss/abstracts/functions/_alpha.scss
@@ -1,7 +1,8 @@
 // -----------------------------------------------------------------------------
-// +  _alpha.scss: Return color with different opacity value.
+// +  <<--------------------<< ALPHA >>-------------------->>
 // -----------------------------------------------------------------------------
 
+// -  <---------------| Alpha |--------------->
 @function alpha($color, $opacity) {
   $color: str-replace($color, 'var(');
   $color: str-replace($color, ')');
