--- a/assets/styles/scss/abstracts/mixins/_animations.scss
+++ b/assets/styles/scss/abstracts/mixins/_animations.scss
@@ -1,7 +1,10 @@
 // -----------------------------------------------------------------------------
-// +  _animations.scss: This partial file contains all Scss 'animations'.
+// +  <<--------------------<< ANIMATIONS >>-------------------->>
 // -----------------------------------------------------------------------------
 
+// *  <<--------------------<< GRADIENTS >>-------------------->>
+
+// -  <---------------| Linear-Gradient |--------------->
 @keyframes linear-gradient {
   0% {
     background-position: 0% 50%;
