--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -6,7 +6,7 @@
 -  CORE TAGS
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< * >>---------->>
+// -  <---------------| * >>---------->>
 * {
   padding: 0;
   border: 0;
@@ -15,11 +15,11 @@
   // height: auto;
 }
 
-// #  <<<----------<< html >>---------->>
+// -  <---------------| html >>---------->>
 html {
   @include fluid-type(40rem, 60rem, 1rem, 1.5rem);
 }
-// #  <<<----------<< body >>---------->>
+// -  <---------------| body >>---------->>
 body {
   max-width: $limit--max-width;
   margin: $center-me;
@@ -37,19 +37,19 @@ body {
 -  LAYOUT TAGS
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Header >>---------->>
+// -  <---------------| Header >>---------->>
 
 header {
   padding: $buffer--s;
 }
 
-// #  <<<----------<< Article >>---------->>
+// -  <---------------| Article >>---------->>
 
 article {
   padding: $buffer--s;
 }
 
-// #  <<<----------<< Aside >>---------->>
+// -  <---------------| Aside >>---------->>
 
 aside {
   padding: $buffer--s;
@@ -64,13 +64,13 @@ nav {
   padding: $buffer--s;
 }
 
-// #  <<<----------<< Section >>---------->>
+// -  <---------------| Section >>---------->>
 
 section {
   padding: $buffer--s;
 }
 
-// #  <<<----------<< Footer >>---------->>
+// -  <---------------| Footer >>---------->>
 
 footer {
   padding: $buffer--s;
@@ -80,7 +80,7 @@ footer {
 -  MEDIA TAGS
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Svg >>---------->>
+// -  <---------------| Svg >>---------->>
 
 svg {
   @include box-dimensions;
@@ -91,7 +91,7 @@ svg {
   object-position: center center;
 }
 
-// #  <<<----------<< Img >>---------->>
+// -  <---------------| Img >>---------->>
 
 img {
   @include box-dimensions;
