--- a/assets/styles/scss/examples.scss
+++ b/assets/styles/scss/examples.scss
@@ -1,11 +1,9 @@
 // -----------------------------------------------------------------------------
-// +  <<<--------------------<<< LEVEL 1 >>>-------------------->>>
+// +  <<--------------------<<  >>-------------------->>
 // -----------------------------------------------------------------------------
 
-// -----------------------------------------------------------------------------
-// *  <<---------------<< LEVEL 2 >>--------------->>
-// -----------------------------------------------------------------------------
+// *  <<--------------------<<  >>-------------------->>
 
-// -  <----------< LEVEL 3 >---------->
+// -  <---------------|  |--------------->
 
-// #  <-----< Level 4 >----->
+// #
