--- a/assets/styles/scss/abstracts/functions/_adjust-hsl.scss
+++ b/assets/styles/scss/abstracts/functions/_adjust-hsl.scss
@@ -1,7 +1,8 @@
 // -----------------------------------------------------------------------------
-// +  _adjust-hsl.scss: Modify color HSL values.
+// +  <<--------------------<< ADJUST-HSL >>-------------------->>
 // -----------------------------------------------------------------------------
 
+// -  <---------------| Adjust-Hsl |--------------->
 @function adjust-hsl(
   $color,
   $hueMultiplier: 1,
