--- a/assets/styles/scss/abstracts/functions/_adjust-hsla.scss
+++ b/assets/styles/scss/abstracts/functions/_adjust-hsla.scss
@@ -1,7 +1,8 @@
 // -----------------------------------------------------------------------------
-// +  _adjust-hsla.scss: Modify color HSLA values.
+// +  <<--------------------<< ADJUST-HSLA >>-------------------->>
 // -----------------------------------------------------------------------------
 
+// -  <---------------| Adjust-Hsla |--------------->
 @function adjust-hsla(
   $color,
   $hueMultiplier: 1,
