--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -1,12 +1,9 @@
 // -----------------------------------------------------------------------------
-// +  _wireframes.scss: This partial file contains all Scss 'wireframes'.
+// +  <<--------------------<< WIREFRAMES >>-------------------->>
 // -----------------------------------------------------------------------------
 
-// -----------------------------------------------------------------------------
-// *  Wireframes with HTML data attributes
-// -----------------------------------------------------------------------------
-
-@mixin manual-wireframes($wireframe--manual) {
+// -  <---------------| Manual-Wireframe |--------------->
+@mixin manual-wireframe($wireframe--manual) {
   @if $wireframe--manual {
     [data-wf] {
       position: relative;
@@ -51,15 +48,12 @@
   }
 }
 
-// -----------------------------------------------------------------------------
-// *  Automatic Wireframe
-// -----------------------------------------------------------------------------
-
-@mixin automatic-wireframes($wireframe--automatic) {
+// -  <---------------| Automatic-Wireframe |--------------->
+@mixin automatic-wireframe($wireframe--automatic) {
   @if $wireframe--automatic {
     // ! REFERENCE: <https://developer.mozilla.org/en-US/docs/Web/HTML/Element#href>
 
-    // -  <<----------<< (1) Content Sectioning: Block >>---------->>
+    // #  Content Sectioning: Block
     div,
     address,
     article,
@@ -75,11 +69,10 @@
     main,
     nav,
     section {
-      outline: 2px rgba(0, 255, 0, 0.75) dashed;
+      outline: $buffer--xxs rgba(0, 255, 0, 0.75) dashed;
     }
 
-    // -  <<----------<< (2) Text Content: Block >>---------->>
-
+    // #  Text Content: Block
     blockquote,
     figcaption,
     figure,
@@ -88,11 +81,10 @@
     ol,
     p,
     ul {
-      outline: 2px rgba(0, 0, 255, 0.75) dashed;
+      outline: $buffer--xxs rgba(0, 0, 255, 0.75) dashed;
     }
 
-    // -  <<----------<< (3) Inline Text Semantics >>---------->>
-
+    // #  Inline Text Semantics
     // a,
     abbr,
     b,
@@ -124,53 +116,47 @@
     ul,
     var,
     wbr {
-      outline: 2px rgb(255, 140, 0) dotted;
+      outline: $buffer--xxs rgb(255, 140, 0) dotted;
     }
 
-    // -  <<----------<< (4) Image and Multimedia >>---------->>
-
+    // #  Image and Multimedia
     area,
     audio,
     img,
     map,
     track,
     video {
-      outline: 1.5px rgba(0, 0, 128, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(0, 0, 128, 0.75) dashed;
     }
 
-    // -  <<----------<< (5) Embedded Content >>---------->>
-
+    // #  Embedded Content
     embed,
     iframe,
     object,
     param,
     picture,
     source {
-      outline: 1.5px rgba(198, 200, 100, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(198, 200, 100, 0.75) dashed;
     }
 
-    // -  <<----------<< (6) SVG and MathML >>---------->>
-
+    // #  SVG and MathML
     svg,
     math {
-      outline: 1.5px rgba(0, 128, 128, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(0, 128, 128, 0.75) dashed;
     }
 
-    // -  <<----------<< (7) Scripting >>---------->>
-
+    // #  Scripting
     canvas {
-      outline: 1.5px rgba(188, 143, 143, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(188, 143, 143, 0.75) dashed;
     }
 
-    // -  <<----------<< (8) Demarcating Edits >>---------->>
-
+    // #  Demarcating Edits
     del,
     ins {
-      outline: 1.5px rgba(0, 255, 255, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(0, 255, 255, 0.75) dashed;
     }
 
-    // -  <<----------<< (9) Table Content >>---------->>
-
+    // #  Table Content
     caption,
     col,
     colgroup,
@@ -181,11 +167,10 @@
     th,
     thead,
     tr {
-      outline: 1.5px rgba(128, 128, 0, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(128, 128, 0, 0.75) dashed;
     }
 
-    // -  <<----------<< (10) Forms >>---------->>
-
+    // #  Forms
     // button,
     datalist,
     fieldset,
@@ -200,36 +185,34 @@
     progress,
     select,
     textarea {
-      outline: 1.5px rgba(255, 0, 255, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(255, 0, 255, 0.75) dashed;
     }
 
-    // -  <<----------<< (11) Interactive Elements: Block >>---------->>
-
+    // #  Interactive Elements: Block
     details, // Block
     dialog, // Block
     menu {
-      outline: 1.5px rgba(188, 143, 143, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(188, 143, 143, 0.75) dashed;
     }
 
-    // -  <<----------<< (12) Web Components >>---------->>
-
+    // #  Web Components
     slot, // Inline
     template {
       // Block
-      outline: 1.5px rgba(127, 255, 212, 0.75) dashed;
+      outline: calc(#{$buffer--xxs} / 2) rgba(127, 255, 212, 0.75) dashed;
     }
 
-    // -  <<----------<< (13) Custom >>---------->>
+    // #  Custom
     .block-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
+      outline: $buffer--xxs rgba(255, 0, 0, 0.75) solid;
     }
 
     .flex-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
+      outline: $buffer--xxs rgba(255, 0, 0, 0.75) solid;
     }
 
     .grid-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
+      outline: $buffer--xxs rgba(255, 0, 0, 0.75) solid;
     }
   }
 }
