--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -238,13 +238,13 @@ template {
 +  PARTIAL SCSS GROUP 3 - `base/`
 \* ========================================================================== */
 /* -------------------------------------------------------------------------- *\
-*  _modern-normalize.scss: This partial file contains the 'modern-normalize'.
+// +  <<--------------------<< MODERN-NORMALIZE >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
-*  _base.scss: This partial file contains the custom `base` HTML tags
+// +  <<--------------------<< LAYOUT TAGS >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  CORE TAGS
+*  <<--------------------<< ROOT TAGS >>-------------------->>
 \* -------------------------------------------------------------------------- */
 * {
   padding: 0;
@@ -269,7 +269,7 @@ body {
 }
 
 /* -------------------------------------------------------------------------- *\
--  LAYOUT TAGS
+*  <<--------------------<< MAIN SECTIONING TAGS >>-------------------->>
 \* -------------------------------------------------------------------------- */
 header {
   padding: 0.5rem;
@@ -323,7 +323,7 @@ img {
 }
 
 /* -------------------------------------------------------------------------- *\
-*  _typography--v2.scss: This partial file contains all application-wide 'typography--v2'.
+// +  <<--------------------<< TYPOGRAPHY >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
 -  HEADINGS
