--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -16,7 +16,7 @@ $dimension--xl: 1920px; // 120rem
 $dimension--xxl: 2560px; // 160rem
 
 // #  Utilitarian Values
-$limit--max-width: $dimension--xl;
+$max-width--root: $dimension--xl;
 
 // -  <---------------| BOX MODEL: Padding - Border - Margin |--------------->
 
