--- a/assets/styles/css/examples.css
+++ b/assets/styles/css/examples.css
@@ -1,1 +1,7 @@
-/* No CSS *//*# sourceMappingURL=examples.css.map */
+/* -------------------------------------------------------------------------- *\
++  <<--------------------<<  >>-------------------->>
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+*  <<--------------------<<  >>-------------------->>
+\* -------------------------------------------------------------------------- */
+/*# sourceMappingURL=examples.css.map */
