--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -15,9 +15,16 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 3 - `base/`
 \* ========================================================================== */
-@import 'base/modern-normalize';
-@import 'base/layout';
-@import 'base/typography';
+@import 'base/normalize';
+@import 'base/root';
+@import 'base/sectioning';
+@import 'base/heading';
+@import 'base/block-text';
+@import 'base/inline-text';
+@import 'base/multimedia';
+@import 'base/table';
+@import 'base/forms';
+@import 'base/interactive';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 4 - `layout/`
