--- a/assets/styles/scss/abstracts/_configs.scss
+++ b/assets/styles/scss/abstracts/_configs.scss
@@ -2,13 +2,6 @@
 // +  <<--------------------<< CONFIGS >>-------------------->>
 // -----------------------------------------------------------------------------
 
-// -  <---------------| Scroll-Behavior |--------------->
-@media (prefers-reduced-motion: no-preference) {
-  :root {
-    scroll-behavior: smooth;
-  }
-}
-
 // *  <<--------------------<< WIREFRAMES >>-------------------->>
 
 // -  <---------------| Automatic |--------------->
@@ -16,3 +9,8 @@
 
 // -  <---------------| Manual |--------------->
 @include manual-wireframe(false);
+
+// *  <<--------------------<< SCROLLBARS >>-------------------->>
+
+// -  <---------------| Snap Type |--------------->
+// @include scroll-snap(true);
