--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
@@ -26,7 +26,7 @@
   }
 
   &__container--text {
-    min-width: calc(#{$dimension--xxs} - #{$buffer--l});
+    min-width: calc(#{$large-dimension--xxs} - #{$buffer--l});
     max-width: calc(#{$card--width} + #{$buffer--m});
     padding: 0;
 
