--- a/assets/styles/scss/base/_root.scss
+++ b/assets/styles/scss/base/_root.scss
@@ -14,6 +14,11 @@
 // #  <---------------| <html> |--------------->
 html {
   @include fluid-type(40rem, 60rem, 1rem, 1.5rem);
+  @include scrollbar-style(
+    calc(#{$buffer--s} + #{$buffer--xs}),
+    var(--color-tertiary)
+  );
+  @include scrollbar-function(smooth, y proximity);
 }
 
 // #  <---------------| <body> |--------------->
