--- a/assets/styles/scss/waiting-on-migration/components/_card.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_card.scss
@@ -9,14 +9,14 @@
   @include box-transition;
 
   overflow: hidden;
-  min-width: calc(#{$dimension--xxs} - (#{$dimension--xxs} / 10));
-  max-width: calc((#{$dimension--l} / 4));
+  min-width: calc(#{$large-dimension--xxs} - (#{$large-dimension--xxs} / 10));
+  max-width: calc((#{$large-dimension--l} / 4));
   aspect-ratio: $card--aspect-ratio;
   // height: $card--height;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
-  border-radius: $border-radius--s;
+  border-radius: $small-dimension--s;
 
   @include breakpoint(xs) {
     min-width: $card--width;
